--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "express-session": "~1.11.3",
         "bcrypt-nodejs": "~0.0.3",
         "connect-flash":"~0.1.1",
-        "ejs": "~2.3.3"
+        "ejs": "~2.3.3",
+        "multer":"~1.1.0"
     },
     "version": "1.0.0",
     "description": "josephs app",
